--- a/khan/exercises/absolute_value.html
+++ b/khan/exercises/absolute_value.html
@@ -3,18 +3,17 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Absolute value</title>
-    <!-- handlebars requires backbone, which in turn requires underscore -->
-    <script src="../underscore-min.js"></script>
-    <script src="../backbone-min.js"></script>
-    <script src="../handlebars-1.0.0.beta.6.js"></script>
-    <script src="../exercises-package/exercises.js"></script>
-    <script src="../exercises-package/bottomless-queue.js"></script>
-    <script src="../exercises-package/handlebars-helpers.js"></script>
-    <script src="../exercises-package/stacks.js"></script>
-    <script src="../exercises-package/user-exercise-cache.js"></script>
-    <!--
+    <script src="../jquery.js"></script>
     <script src="../khan-exercise.js"></script>
-    -->
+    <style>
+    #top-header, #footer {display:none;}
+    #outer-wrapper, #page-container {background:#fff;}
+    #questions-to-do {display: none; font-size: 150%; top: 0; left: -4em;}
+    #questions-to-do ol li { background-color: #fff; border: 2px solid #ccc; border-radius: 3px; color: #999; cursor: pointer; margin-top: -.5em; padding: 0 .5em; -webkit-transform:rotate(-17deg); -ms-transform:rotate(-17deg); -moz-transform:rotate(-17deg); -o-transform:rotate(-17deg) }
+
+    #questions-done {display: none; font-size: 150%; top: 0; right: -4em;}
+    #questions-done ol li { background-color: #fff; border: 2px solid #ccc; border-radius: 3px; color: #999; cursor: pointer; margin-top: -.5em; padding: 0 .5em; -webkit-transform:rotate(17deg); -ms-transform:rotate(17deg); -moz-transform:rotate(17deg); -o-transform:rotate(17deg) }
+    </style>
 </head>
 <body>
     <div class="exercise">
@@ -60,5 +59,50 @@
         <p data-if="SIGN !== &quot;&quot;">In other words, <code><var>INT + FRAC</var></code> is the non-negative version of <code><var>SIGN + INT + FRAC</var></code>.</p>
     </div>
     </div>
+
+    <div id="questions-to-do">
+    <ol>
+        <li> Q5 </li>
+        <li> Q4 </li>
+        <li> Q3 </li>
+        <li> Q2 </li>
+        <li> Q1 </li>
+    </ol>
+    </div>
+
+    <div id="questions-done">
+    <ol>
+    </ol>
+    </div>
+
 </body>
+<script>
+var initStacks = function () {
+    $('#problem-and-answer').css('position', 'relative');
+    
+    $('#problem-and-answer').append($('#questions-to-do'));
+    $('#questions-to-do').css('position', 'absolute');
+    $('#problem-and-answer').append($('#questions-done'));
+    $('#questions-done').css('position', 'absolute');
+
+    $('#questions-to-do').find('li').mouseover(function (ev) {
+        $(this).css('border-color', '#000');
+        $(this).css('color', '#000');
+    });
+    $('#questions-to-do').find('li').mouseout(function (ev) {
+        $(this).css('border-color', '#ccc');
+        $(this).css('color', '#999');
+    });
+    $('#questions-to-do').find('li').click(function (ev) {
+        $(Khan).trigger("gotoNextProblem"); 
+        $(this).trigger('mouseout');
+        $(this).appendTo($('#questions-done').children('ol'));
+    });
+    $('#questions-to-do').fadeIn('slow');
+    $('#questions-done').fadeIn('slow');
+};
+$(document).ready(function () {
+window.setTimeout(initStacks, 2000);
+});
+</script>
 </html>
